--- a/_posts/2020-05-09-pyconus2020.md
+++ b/_posts/2020-05-09-pyconus2020.md
@@ -3,7 +3,7 @@ layout: post
 title: "Data Workshop at PyCon US 2020"
 author: "Cheuk Ho"
 categories: event
-tags: [documentation,sample]
+tags: [pycon us, workshop]
 image: city-2.jpg
 ---
 
