update cover images

--- a/_posts/2020-07-23-our-name.md
+++ b/_posts/2020-07-23-our-name.md
@@ -4,7 +4,7 @@ title: "We officially have a name (and logo)!"
 author: "Cheuk Ho"
 categories: news
 tags: [meta]
-image: arctic-1.jpg
+image: /assets/img/cover/name_logo.jpg
 ---
 
 After months of struggles: brain-storming, working with different marketing persons, meetings after meetings, we finally managed to settle with a name and logo that we are happy with.
