--- a/_posts/2020-08-09-pyconafrica2020.md
+++ b/_posts/2020-08-09-pyconafrica2020.md
@@ -4,7 +4,7 @@ title: "Data Workshop at PyCon Africa"
 author: "Cheuk Ho"
 categories: event
 tags: [pycon africa, workshop]
-image: cuba-1.jpg
+image: /assets/img/cover/pyconafrica.jpg
 ---
 
 Coming up in August 2020, we have partnered with PyCon Africa to launch our 1st African workshop. We are super excited about it as the [study by GitHub on the distribution of open-source projects](https://octoverse.github.com/), there's still not as many contributors form African countries. Hopefully, we can include more folks from Africa in our Humble Data family. Note that as this workshop will be an online workshop, it is not limited to applications form Africa.
