--- a/_posts/2020-05-09-pyconus2020.md
+++ b/_posts/2020-05-09-pyconus2020.md
@@ -4,7 +4,7 @@ title: "Data Workshop at PyCon US 2020"
 author: "Cheuk Ho"
 categories: event
 tags: [pycon us, workshop]
-image: city-2.jpg
+image: /assets/img/cover/pyconus.jpg
 ---
 
 ## Learn Python for data science at home in this free two-part remote bootcamp
