--- a/_posts/2020-08-09-pyconafrica2020.md
+++ b/_posts/2020-08-09-pyconafrica2020.md
@@ -21,13 +21,13 @@ Time: 9AM - 5PM WAT
 
 This workshop is for people who have no or little experience in Python or data science. The only requirement to join this workshop is to register a "pay as you wish" ticket form PyCon Africa 2020 and have a reliable internet connection. Tell us a bit about you by filling the application form [here](https://t.co/DcilroLk1i?amp=1)
 
-<button name="button" onclick="https://t.co/DcilroLk1i?amp=1">Apply to participant in the workshop</button>
+[Apply to participate in the workshop](https://t.co/DcilroLk1i?amp=1){: .btn}
 
 ## Calling for mentors
 
 We wish to be able to run a workshop with as many participants as we can accommodate online, however, we also need a lot of mentors to help out. Be a mentor not just help you to familiarise yourself with your knowledge in data science, it also gives you a good vibe afterwards. If you have the skill to share, we are happy to welcome you to our Humble Data family. Please join using [this form](https://t.co/MvEp7Q2Iff?amp=1).
 
-<button name="button" onclick="https://t.co/MvEp7Q2Iff?amp=1">Apply to join as mentor</button>
+[Apply to join as mentor](https://t.co/MvEp7Q2Iff?amp=1){: .btn}
 
 ## Questions?
 
