Add explicit requirements
Also link to timezone converter and some grammar changes

--- a/_posts/2020-09-12-pydataglobal2020.md
+++ b/_posts/2020-09-12-pydataglobal2020.md
@@ -7,7 +7,7 @@ tags: [pydata global, workshop]
 image: /assets/img/cover/pydataglobal.jpg
 ---
 
-We are so excited to announce that we will be running our 3rd Data Workshop for beginners with PyDAta Global in November 2020. It will be targeted to global audiences. This is the first time we will be running 2 sessions to cater participants from different time zones.
+We are so excited to announce that we will be running our 3rd Data Workshop for beginners with PyDAta Global in November 2020. It is targeted to a global audience. This is the first time we will be running 2 sessions to cater participants from different time zones.
 
 ## Date and Time
 
@@ -15,14 +15,20 @@ Date: 7th November 2020
 
 Time:
 
- - Session 1: 8:00 am - 3:59 pm UTC
- - Session 2: 4:00 pm - 11:59 pm UTC
+ - Session 1: 8:00 am - 3:59 pm UTC [🗺️](https://www.timeanddate.com/worldclock/fixedtime.html?msg=Humble+Data+Pydata+Global%3A+Session+1&iso=20201107T08&p1=1440&ah=7&am=59)
+ - Session 2: 4:00 pm - 11:59 pm UTC [🗺️](https://www.timeanddate.com/worldclock/fixedtime.html?msg=Humble+Data+Pydata+Global%3A+Session+2&iso=20201107T16&p1=1440&ah=7&am=59)
 
 **check your time zone at the [time zone converter](https://www.thetimezoneconverter.com/)**
 
+## Requirements
+
+- PyData Global 2020 [ticket](https://global.pydata.org/pages/tickets.html)
+- Access to a computer with a reliable internet connection
+- Accept our [Code of Conduct](https://humbledata.org/pages/coc.html)
+
 ## Calling for participants
 
-This workshop is for people who have no or little experience in Python or data science. The only requirement to join this workshop is to register a ticket form PyData Global 2020 (with a minimum price of $10 USD, if you cannot afford it, there's a scholarship that you can apply), have access to a computer and have a reliable internet connection. Tell us a bit about you by filling the application form [here](https://forms.gle/YTxqHnpNyicM3s9x8)
+This workshop is for people who have no or little experience in Python or data science. The only requirements to join this workshop is to register a ticket form PyData Global 2020 (with a minimum price of $10 USD, if you cannot afford it, there's a scholarship that you can apply), access to a computer and a reliable internet connection. Tell us a bit about you by filling the application form [here](https://forms.gle/YTxqHnpNyicM3s9x8)
 
 [Apply to participate in the workshop](https://forms.gle/YTxqHnpNyicM3s9x8){: .btn}
 
@@ -30,7 +36,7 @@ This workshop is for people who have no or little experience in Python or data s
 
 ## Calling for mentors
 
-We wish to be able to run a workshop with as many participants as we can accommodate online, however, we also need a lot of mentors to help out. Be a mentor not just help you to familiarise yourself with your knowledge in data science, it also gives you a good vibe afterwards. If you have the skill to share, we are happy to welcome you to our Humble Data family. Please join using [this form](https://forms.gle/ySaCbbhpDmmtZqci7).
+We wish to be able to run a workshop with as many participants as we can accommodate online, however, we also need a lot of mentors to help out. Being a mentor doesn't just help you familiarise yourself with your knowledge in data science, it also gives you a good vibe afterwards. If you have the skill to share, we are happy to welcome you to our Humble Data family. Please join using [this form](https://forms.gle/ySaCbbhpDmmtZqci7).
 
 [Apply to join as mentor](https://forms.gle/ySaCbbhpDmmtZqci7){: .btn}
 
