--- a/_posts/2020-09-12-pydataglobal2020.md
+++ b/_posts/2020-09-12-pydataglobal2020.md
@@ -7,7 +7,7 @@ tags: [pydata global, workshop]
 image: /assets/img/cover/pydataglobal.jpg
 ---
 
-We are so excited to announce that we will be running our 3rd Data Workshop for beginners with PyDAta Global in November 2020. It is targeted to a global audience. This is the first time we will be running 2 sessions to cater participants from different time zones.
+We are so excited to announce that we will be running our 3rd Data Workshop for beginners with PyData Global in November 2020. It is targeted to a global audience. This is the first time we will be running 2 sessions to cater participants from different time zones.
 
 ## Date and Time
 
