--- a/_posts/2020-11-07-pydataglobal2020.md
+++ b/_posts/2020-11-07-pydataglobal2020.md
@@ -7,7 +7,7 @@ tags: [pydata global, workshop]
 image: /assets/img/cover/pydataglobal.jpg
 ---
 
-We are so excited to announce that we will be running our 3rd Data Workshop for beginners with PyData Global in November 2020. It is targeted to a global audience. This is the first time we will be running 2 sessions to cater participants from different time zones.
+We are so excited to announce that we will be running our 3rd Data Workshop for beginners with [PyData Global](https://global.pydata.org//) in November 2020. It is targeted to a global audience. This is the first time we will be running 2 sessions to cater participants from different time zones.
 
 ## Date and Time
 
@@ -22,7 +22,7 @@ Time:
 
 ## Requirements
 
-- PyData Global 2020 [ticket](https://global.pydata.org/pages/tickets.html)
+- PyData Global 2020 [ticket](https://global.pydata.org/pages/tickets.html) ($10 minimum donation or apply for a [Diversity Scholarship](https://forms.gle/gggUk7Z9rxEoRXk18))
 - Access to a computer with a reliable internet connection
 - Accept our [Code of Conduct](https://humbledata.org/pages/coc.html)
 
