adding apply btn

--- a/_posts/2021-05-13-pyconus2021.md
+++ b/_posts/2021-05-13-pyconus2021.md
@@ -39,7 +39,11 @@ If you have zero programming experience, this workshop is made for you! If you a
 
 This workshop is being run by data scientists and software engineers dedicated to the spirit of open source. Every day we benefit from the hard work of others when we use free open tools. This is our way of giving back. We thank PyCon US and the Python Software Foundation for their support in facilitating this workshop.
 
-**If you would like to attend this workshop, please [apply here](https://forms.gle/Jrn9opda2rf7cbSa6). Deadline: 18th April,2021**
+**If you would like to attend this workshop, please [apply here](https://forms.gle/Jrn9opda2rf7cbSa6):**
+
+[Apply to participate in the workshop](https://forms.gle/Jrn9opda2rf7cbSa6){: .btn}
+
+**Deadline: 18th April,2021**
 
 ---
 
@@ -50,3 +54,7 @@ We are looking for volunteers to help mentor the attendees! If you are intereste
 - Curiosity!
 
 In return, you’ll meet interesting new people outside your usual developer group, eternal gratitude from your group of attendees, and you’ll be helping to break down stereotypes around what a developer “looks like”. Plus you can add all that on your CV!
+
+[Apply to join as mentor](https://forms.gle/Jrn9opda2rf7cbSa6){: .btn}
+
+**Deadline: 11th April,2021**
