Fixing information for pycon 2021

--- a/_posts/2021-05-13-pyconus2021.md
+++ b/_posts/2021-05-13-pyconus2021.md
@@ -13,19 +13,19 @@ image: "/assets/img/cover/pyconus-21.png"
 
 Following the success of the Beginners Data Workshop for Minorities (now known as Humble Data Workshop) last year at PyCon US following with more at PyCon Africa and PyData Global, we are glad that we will be back to PyCon US in 2021 online!
 
-## Learn Python for data science at home in this free two-part remote bootcamp
+## Learn Python for data science at home in this free one day remote bootcamp
 
-Would you like to learn to code but don’t know where to start? Taking your first steps in programming can seem like an impossible task so we’ve decided to put on a workshop to show 60 beginners how it can be done and share our passion for the world of data science!
+Would you like to learn to code but don’t know where to start? Taking your first steps in programming can seem like an impossible task so we’ve decided to put on a workshop to show 50 beginners how it can be done and share our passion for the world of data science!
 
 >“We want our community to be more diverse: whoever you are, and whatever your background, we welcome you.” – Python Software Foundation’s Diversity Statement
 
-We invite those from underrepresented groups in data to apply to join us on Thursday 13th May 2020 for the PyCon 2021 Humble Data Worksop. In this one day online workshop you will learn the basics of programming in Python, as well as how to use tools such as Jupyter Notebook to analyse data.
+We invite those from underrepresented groups in data to apply to join us on Thursday 13th May 2021 for the PyCon 2021 Humble Data Worksop. In this one day online workshop you will learn the basics of programming in Python, as well as how to use tools such as Jupyter Notebook to analyse data.
 
 You will be learning in small groups, each with an assigned mentor to guide you through the workshop materials and answer your questions. This will all be facilitated online through the wonders of modern technology. You can expect plenty of exercises, quizzes and games, and inspiring talks from those who were once in your shoes. Key details as follows:
 
 ## When?
 
-You must attend both sessions on Thursday 13th May 2021 at 11:00am - 6:00pm EDT.
+Thursday 13th May 2021 at 11:00am - 6:00pm EDT.
 
 ## Where? What do I need to bring?
 
