--- a/_posts/2021-05-13-pyconus2021.md
+++ b/_posts/2021-05-13-pyconus2021.md
@@ -49,7 +49,7 @@ This workshop is being run by data scientists and software engineers dedicated t
 
 ---
 
-We are looking for volunteers to help mentor the attendees! If you are interested, please **[apply here](https://forms.gle/Jrn9opda2rf7cbSa6)**. The **deadline is 11th April,2021**. You don’t need to be an expert in programming or Python – we’re teaching the basics! You do need:
+We are looking for volunteers to help mentor the attendees! If you are interested, please **[apply here](https://forms.gle/mGophJ3TweRLHtd57)**. The **deadline is 11th April,2021**. You don’t need to be an expert in programming or Python – we’re teaching the basics! You do need:
 
 - Lots of patience, smiles and a friendly attitude.
 - The ability to answer all sorts of questions in a beginner-friendly way (even if that means the explanation isn’t technically precise) throughout the duration of the workshop.
@@ -57,6 +57,6 @@ We are looking for volunteers to help mentor the attendees! If you are intereste
 
 In return, you’ll meet interesting new people outside your usual developer group, eternal gratitude from your group of attendees, and you’ll be helping to break down stereotypes around what a developer “looks like”. Plus you can add all that on your CV!
 
-[Apply to join as mentor](https://forms.gle/Jrn9opda2rf7cbSa6){: .btn}
+[Apply to join as mentor](https://forms.gle/mGophJ3TweRLHtd57){: .btn}
 
 **Deadline: 11th April,2021**
