Turn apply button into mailing list button

--- a/_posts/2021-05-13-pyconus2021.md
+++ b/_posts/2021-05-13-pyconus2021.md
@@ -41,15 +41,16 @@ If you have zero programming experience, this workshop is made for you! If you a
 
 This workshop is being run by data scientists and software engineers dedicated to the spirit of open source. Every day we benefit from the hard work of others when we use free open tools. This is our way of giving back. We thank PyCon US and the Python Software Foundation for their support in facilitating this workshop.
 
-**If you would like to attend this workshop, please [apply here](https://forms.gle/Jrn9opda2rf7cbSa6):**
+**If you would like to hear about future workshops, please [apply here](https://forms.gle/Jrn9opda2rf7cbSa6):**
 
-[Apply to participate in the workshop](https://forms.gle/Jrn9opda2rf7cbSa6){: .btn}
+[Sign up to our mailing list](https://forms.gle/Jrn9opda2rf7cbSa6){: .btn}
 
 **Deadline: 18th April,2021**
 
 ---
 
-**UPDATE (11th April 2021): Applications for mentors have now closed. If you would like to be the first to know about future workshops, please [sign up to our (very infrequent) mailing list here](https://forms.gle/mGophJ3TweRLHtd57).**
+## UPDATE (11th April 2021)##
+Applications for mentors have now closed. If you would like to be the first to know about future workshops, please [sign up to our (very infrequent) mailing list here](https://forms.gle/mGophJ3TweRLHtd57).
 
 We are looking for volunteers to help mentor the attendees! You don’t need to be an expert in programming or Python – we’re teaching the basics! You do need:
 
