--- a/_posts/2021-05-13-pyconus2021.md
+++ b/_posts/2021-05-13-pyconus2021.md
@@ -45,7 +45,7 @@ This workshop is being run by data scientists and software engineers dedicated t
 
 [Sign up to our mailing list](https://forms.gle/Jrn9opda2rf7cbSa6){: .btn}
 
-**Deadline: 18th April,2021**
+**Deadline: 18th April 2021**
 
 ---
 
