--- a/_posts/2022-10-13-pyconghana2022.md
+++ b/_posts/2022-10-13-pyconghana2022.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Data Workshop at PyCon Ghana 2022"
+title: "Humble Data Workshop at PyCon Ghana 2022"
 author: "Cheuk Ho"
 categories: event
 tags: [pycon us, workshop]
