adding stickermule sponsor

--- a/_posts/2022-10-13-pyconghana2022.md
+++ b/_posts/2022-10-13-pyconghana2022.md
@@ -45,3 +45,10 @@ Curiosity! In return, you’ll meet interesting new people outside your usual de
 If you would like to be a mentor, [please apply here](https://forms.gle/UMiV5QQFGMN5b6wd7).
 
 [Apply to join as mentor](https://forms.gle/UMiV5QQFGMN5b6wd7){: .btn}
+
+
+## Special Thanks
+
+Thank you to our sticker sponsor:
+
+[![stickermule](/assets/img/logos/02-sticker-mule-logo-light.png)](https://mule.to/p38p)
