--- a/_posts/2022-07-12-europython2022.md
+++ b/_posts/2022-07-12-europython2022.md
@@ -3,7 +3,7 @@ layout: post
 title: "Humble Data Workshop at EuroPython 2022"
 author: "Cheuk Ho"
 categories: event
-tags: [pycon us, workshop]
+tags: [ep, workshop]
 image: /assets/img/cover/ep_dublin.jpg
 ---
 
