--- a/_posts/2022-10-13-pyconghana2022.md
+++ b/_posts/2022-10-13-pyconghana2022.md
@@ -3,7 +3,7 @@ layout: post
 title: "Humble Data Workshop at PyCon Ghana 2022"
 author: "Cheuk Ho"
 categories: event
-tags: [pycon us, workshop]
+tags: [pycon gh, workshop]
 image: /assets/img/cover/pycon_ghana.jpg
 ---
 
