--- a/_posts/2023-07-17-europython2023.md
+++ b/_posts/2023-07-17-europython2023.md
@@ -10,49 +10,52 @@ image: /assets/img/cover/ep_prague.jpg
 ## Beginners' Day - Humble Data Workshop ##
 *WE ARE BACK AGAIN!*
 
-Following the success and positive feedback at EuroPython 2022, we are glad to have it again this year at EuroPython 2023!
+Following the success and positive feedback at EuroPython 2022, we are glad to have HumbleData again at EuroPython 2023!
 
 
 ## Learn Python for Data Science in this Beginners' Day Workshop ##
-Would you like to learn to code but don’t know where to start? Taking your first steps in programming can seem like an impossible task so we’ve decided to put on a workshop to show 50 beginners how it can be done and share our passion for the world of data science!
+Would you like to learn to code but don’t know where to start? Would you like to take a peek at Data Science but are not sure how? Taking first steps are very hard. That is why we have decided to host a workshop to teach beginners how to start with Python and Data Science. Join and let's share our passion for the world of data science!
 
 “We want our community to be more diverse: whoever you are, and whatever your background, we welcome you.” – Python Software Foundation’s Diversity Statement
 
-We invite those from under-represented groups in data to apply to join us on Monday 17th July 2022 for the EuroPython Beginners' Day - Humble Data Workshop. In this workshop you will learn the basics of programming in Python, as well as how to use tools such as Jupyter Notebook to analyse data.
+We invite those from under-represented groups to apply to join us on Monday 17th July 2023 for the EuroPython Beginners' Day - Humble Data Workshop. There, you will learn the basics of programming in Python, useful libraries and tools, such as Jupyter Notebook that help with data analysis.
 
-You will be learning in small groups, each with an assigned mentor to guide you through the workshop materials and answer your questions. This will all be facilitated online through the wonders of modern technology. You can expect plenty of exercises, quizzes and games, and inspiring talks from those who were once in your shoes.
+You will be divided into small groups, each with an assigned mentor to guide you through the workshop materials and answer your questions. You can expect plenty of exercises, quizzes and games, and inspiring talks from those who were once in your shoes.
 
-## WHEN? ##
-Monday 17th July 2022 (time and room TBD).
+## When? ##
+Monday, 17th July 2023 (time and room to be determined).
 
-## WHERE? ##
-EuroPython (see [here](https://ep2023.europython.eu/where))
+## Where? ##
+EuroPython Venue in Prague. More details [here](https://ep2023.europython.eu/where).
 
-## WHO CAN JOIN? ##
+## Who can join? ##
 Anyone with a EuroPython [Conference Ticket or Combined Ticket](https://ep2023.europython.eu/tickets)
 
-## WHAT DO I NEED TO BRING? ##
-You will need a computer with internet access. You are recommended to follow [this instruction to set up](https://github.com/HumbleData/beginners-data-workshop) but it's not required. Our mentors can help you set up on the day.
+## What do I need to bring? ##
+You will need a computer or tablet with internet access. Nothing else!
+ Our mentors will help you set up on the day.
 
-## WHAT DO I NEED TO KNOW? ##
+## Wwhat do I need to know? ##
 If you have zero programming experience, this workshop is made for you! If you already have some experience but are new to Python, we’ve got you covered too – the materials are designed for attendees to progress through the materials at their own rate.
 
-## HOW IS THIS POSSIBLE? ##
-This workshop is being run by data scientists and software engineers dedicated to the spirit of open source. Every day we benefit from the hard work of others when we use free open tools. This is our way of giving back. We thank EuroPython for their support in facilitating this workshop.
+## How is this possible? ##
+This workshop is being run by data scientists and software engineers dedicated to the spirit of open source. Every day we benefit from the hard work of others when we use free open tools. This is our way of giving back. We thank [EuroPython](https://www.europython-society.org/) for their support in facilitating this workshop.
 
-If you would like to attend this workshop, please apply here (TBA).
+If you would like to attend this workshop, please apply [here](https://forms.gle/jrF8uSb8w5tMhAyP8). Deadline: 3rd July 2023.
 
-## Mentors ##
-We are looking for volunteers to help mentor the attendees! You don’t need to be an expert in programming, data science or Python – we’re teaching the basics! You do need:
+## Wanna help too? Be a MENTOR! ##
+We are looking for volunteers to help mentor the attendees! Without you, this is not possible. There is no need to be an expert in programming, data science or Python – we’re teaching the basics! But you do need: <br>
+* Lots of patience, smiles and a *friendly attitude*.
+* The ability to answer questions in a beginner-friendly way, even if it means the explanation is not technically precise.
+* Curiosity.
+* Respect.
+* And will to learn and to teach the mentees.
 
-*Lots of patience, smiles and a friendly attitude.*
-The ability to answer all sorts of questions in a beginner-friendly way (even if that means the explanation isn’t technically precise) throughout the duration of the workshop.
+In return, you will meet new interesting people outside your usual *bubble*, gain eternal gratitude from a group of attendees, and help to break down stereotypes around what a developer “looks like”. <br>
+**BONUS POINT**: All this *should* be added on to your CV!
 
-*Curiosity!*
-In return, you’ll meet interesting new people outside your usual developer group, eternal gratitude from your group of attendees, and you’ll be helping to break down stereotypes around what a developer “looks like”. Plus you can add all that on your CV!
-
-*Fill in this form*
-Apply to be mentor by filling in this form (TBA).
+### *Fill in this form* <br>
+Apply to be mentor by filling in [this form](https://forms.gle/jrF8uSb8w5tMhAyP8).
 
 ## Special Thanks
 
