update by pyladies

--- a/_posts/2023-06-07-pyladiesco23.md
+++ b/_posts/2023-06-07-pyladiesco23.md
@@ -9,52 +9,64 @@ image: /assets/img/cover/pyladies_co.jpg
 
 (English version below)
 
-Humble Data va a América Latina por primera vez!
+Humble Data en América Latina por primera vez!
 
-## Aprenda Python para la ciencia de datos en este taller de ciencia de datos para principiantes
+## Aprende Python para ciencia de datos con este taller para principiantes
 
-¿Te gustaría aprender a programar pero no sabes por dónde empezar? Dar los primeros pasos en la programación puede parecer una tarea imposible, por lo que hemos decidido organizar un taller para mostrar a 30 principiantes cómo se puede hacer y compartir nuestra pasión por el mundo de la ciencia de datos.
+¿Te gustaría aprender a programar pero no sabes por dónde empezar? Dar los primeros pasos en la programación puede parecer una tarea imposible, razón por que existe la organización de este taller para mostrar a ~40 principiantes cómo se puede hacer y compartir nuestra pasión por el mundo de la ciencia de datos.
 
-“Queremos que nuestra comunidad sea más diversa: quienquiera que sea y cualquiera que sea su origen, le damos la bienvenida”. – Declaración de diversidad de Python Software Foundation
+“Queremos que nuestra comunidad sea más diversa: quien quiera que sea y cualquiera que sea su origen, le damos la bienvenida”. – Declaración de diversidad de Python Software Foundation.
 
-Invitamos a aquellos de grupos subrepresentados en los datos a postularse para unirse a nosotros el **7 y 8 de junio de 2023** en Bogotá (lugar por confirmar) para PyLadies Colombia - Humble Data Workshop. En este taller, aprenderá los conceptos básicos de programación en Python, así como también cómo usar herramientas como Jupyter Notebook para analizar datos.
+Invitamos a aquellas personas de grupos subrepresentados a postularse para unirse a nosotros el **7 y 8 de junio de 2023** en Bogotá con PyLadies Colombia - Humble Data Workshop. En este taller, aprenderá los conceptos básicos de programación en Python, así como también cómo usar herramientas como Jupyter Notebook para analizar datos.
 
-Aprenderá en grupos pequeños, cada uno con un mentor asignado para guiarlo a través de los materiales del taller y responder sus preguntas. Todo esto será facilitado en línea a través de las maravillas de la tecnología moderna. Puede esperar muchos ejercicios, cuestionarios y juegos, y charlas inspiradoras de quienes alguna vez estuvieron en su lugar.
+Aprenderás en grupos pequeños, cada uno con un mentor asignado para guiarlo a través de los materiales del taller y responder sus preguntas. Todo esto será facilitado en línea a través de las maravillas de la tecnología moderna. Puedes esperar muchos ejercicios, cuestionarios y juegos, y charlas inspiradoras de quienes alguna vez estuvieron en su lugar.
 
-## ¿QUIÉN PUEDE UNIRSE?
-Cualquiera que haya asistido a la conferencia puede entrar.
+Más información de registro: https://www.pyladies.co/eventos/humble-data-2023
 
-## ¿QUÉ NECESITO LLEVAR?
-Necesitarás una computadora. Puede haber una fiesta de preparación por adelantado, los detalles se anunciarán. Nuestros mentores pueden ayudarlo a configurar el día o en la fiesta de instalación.
+## ¿Quién puede unirse?
 
-## ¿QUÉ NECESITO SABER?
-Si no tienes experiencia en programación, ¡este taller está hecho para ti! Si ya tiene algo de experiencia pero es nuevo en Python, también lo tenemos cubierto: los materiales están diseñados para que los asistentes progresen a través de los materiales a su propio ritmo.
+Cualquier persona que desee asistir y no tenga conocimientos básicos.
 
-## ¿CÓMO ES ESTO POSIBLE?
+## ¿Qué necesito llevar?
+
+Necesitarás un computador. Puede haber una fiesta de preparación por adelantado, los detalles se anunciarán pronto. Nuestros mentores pueden ayudarlo a configurar su computador el mismo día del taller o en la fiesta de instalación.
+
+## ¿Qué necesito saber?
+
+Si no tienes experiencia en programación, ¡este taller está hecho para ti! Si ya tiene algo de experiencia pero es nuevo en Python, también lo tenemos cubierto: los materiales están diseñados para que las personas participantes progresen a través de los materiales a su propio ritmo.
+
+## ¿Cómo es esto posible?
+
 Este taller está a cargo de científicos de datos e ingenieros de software dedicados al espíritu del código abierto. Todos los días nos beneficiamos del arduo trabajo de otros cuando usamos herramientas abiertas y gratuitas. Esta es nuestra forma de retribuir.
 
--------------
+—------------
 
-Humble Data is going to Latin America for the first time!
+Humble Data in Latin America for the first time!
 
-## Learn Python for Data Science in this Beginners' Data Science Workshop
+## Learn Python for Data Science with this beginner workshop
 
-Would you like to learn to code but don’t know where to start? Taking your first steps in programming can seem like an impossible task so we’ve decided to put on a workshop to show 30 beginners how it can be done and share our passion for the world of data science!
+Would you like to learn how to program but need help knowing where to start? Taking the first steps in programming can seem like an impossible task, which is why this workshop is organized to show ~40 beginners how it can be done and share our passion for the world of data science.
 
-“We want our community to be more diverse: whoever you are, and whatever your background, we welcome you.” – Python Software Foundation’s Diversity Statement
+"We want our community to be more diverse: whoever you are and whatever your background, you are welcome." - Diversity statement from the Python Software Foundation.
 
-We invite those from under-represented groups in data to apply to join us on **7th and 8th June 2023** at Bogotá (venue TBA) for the PyLadies Colombia - Humble Data Workshop. In this workshop, you will learn the basics of programming in Python, as well as how to use tools such as Jupyter Notebook to analyse data.
+We invite people from underrepresented groups to apply to join us on **June 7th and 8th, 2023**, in Bogotá with PyLadies Colombia - Humble Data Workshop. In this workshop, you will learn Python programming basics and how to use tools like Jupyter Notebooks to analyze data.
 
-You will be learning in small groups, each with an assigned mentor to guide you through the workshop materials and answer your questions. This will all be facilitated online through the wonders of modern technology. You can expect plenty of exercises, quizzes and games, and inspiring talks from those who were once in your shoes.
+You will learn in small groups, each with an assigned mentor to guide you through the workshop materials and answer your questions. All of this will be facilitated online through the wonders of modern technology. You can expect lots of exercises, quizzes, games, and inspiring talks from those who were once in your shoes.
 
-## WHO CAN JOIN?
-Anyone who attended the conference can walk in.
+More registration information: https://www.pyladies.co/eventos/humble-data-2023
 
-## WHAT DO I NEED TO BRING?
-You will need a computer. There may be a setup party in advance, details to be announced. Our mentors can help you set up on the day or at the setup party.
+## Who can join?
 
-## WHAT DO I NEED TO KNOW?
-If you have zero programming experience, this workshop is made for you! If you already have some experience but are new to Python, we’ve got you covered too – the materials are designed for attendees to progress through the materials at their own rate.
+Anyone who wants to attend and needs to gain basic knowledge.
 
-## HOW IS THIS POSSIBLE?
-This workshop is being run by data scientists and software engineers dedicated to the spirit of open source. Every day we benefit from the hard work of others when we use free open tools. This is our way of giving back.
+## What do I need to bring?
+
+You will need a computer. There may be a preparation party in advance, and details will be announced soon. Our mentors can help you set up your computer on the same day as the workshop or at the installation party.
+
+## What do I need to know?
+
+If you need more programming experience, this workshop is made for you! If you already have some experience but are new to Python, we've got you covered, too: the materials are designed for workshop participants to progress through at their own pace.
+
+## How is this possible?
+
+This workshop is run by data scientists and software engineers dedicated to the spirit of open source. Every day we benefit from the hard work of others when we use open and free tools. This is our way of giving back.
