adding EuroPython society as sponsord

--- a/_posts/2023-06-07-pyladiesco23.md
+++ b/_posts/2023-06-07-pyladiesco23.md
@@ -39,6 +39,12 @@ Si no tienes experiencia en programación, ¡este taller está hecho para ti! Si
 
 Este taller está a cargo de científicos de datos e ingenieros de software dedicados al espíritu del código abierto. Todos los días nos beneficiamos del arduo trabajo de otros cuando usamos herramientas abiertas y gratuitas. Esta es nuestra forma de retribuir.
 
+## Gracias especiales
+
+Gracias a nuestro patrocinador, EuroPython Society, por hacerlo posible:
+
+[![EPS logo](/assets/img/logos/EPS-Logo-with-Text-v3-1024px-alpha.png)](https://www.europython-society.org/)
+
 —------------
 
 Humble Data in Latin America for the first time!
@@ -70,3 +76,9 @@ If you need more programming experience, this workshop is made for you! If you a
 ## How is this possible?
 
 This workshop is run by data scientists and software engineers dedicated to the spirit of open source. Every day we benefit from the hard work of others when we use open and free tools. This is our way of giving back.
+
+## Special Thanks
+
+Thank you to our sponsor - EuroPython Society to make it happened:
+
+[![EPS logo](/assets/img/logos/EPS-Logo-with-Text-v3-1024px-alpha.png)](https://www.europython-society.org/)
