Found a couple of typos, fixed them.

--- a/_posts/2024-05-22-pyconit2024.md
+++ b/_posts/2024-05-22-pyconit2024.md
@@ -9,14 +9,14 @@ image: /assets/img/cover/pyconit.jpg
 
 ## Humble Data at PyCon Italia
 
-Learn Python for Data Science in this Beginners’ Day Workshop
+### Learn Python for Data Science in this Beginners’ Day Workshop
 Would you like to learn to code but don’t know where to start? Taking your first steps in programming can seem like an impossible task, so we’ve decided to put on a workshop to show beginners how it can be done and share our passion for the world of data science!
 
 “We want our community to be more diverse: whoever you are, and whatever your background, we welcome you.” – Python Software Foundation’s Diversity Statement
 
-We invite those from under-represented groups in data to [apply](https://docs.google.com/forms/d/e/1FAIpQLSflhtsv0Ei1xm73DMoLL2vDpi4AwgrTtDScNk3aH4L3KA1OZg/viewform) to join us at PyData Italia's (22-25th May, 2024) [Humble Data Workshop](https://2024.pycon.it/en/event/humble-data). In this workshop, you will learn the basics of programming in Python, as well as how to use tools such as Jupyter Notebook to analyse data.
+We invite those from under-represented groups in data to [apply](https://docs.google.com/forms/d/e/1FAIpQLSflhtsv0Ei1xm73DMoLL2vDpi4AwgrTtDScNk3aH4L3KA1OZg/viewform) to join us at PyCon Italia's (22-25th May, 2024) [Humble Data Workshop](https://2024.pycon.it/en/event/humble-data). In this workshop, you will learn the basics of programming in Python, as well as how to use tools such as Jupyter notebooks to analyse data.
 
-You will be learning in small groups, each with an assigned mentor to guide you through the workshop materials and answer your questions. This will all be facilitated online through the wonders of modern technology. You can expect plenty of exercises, quizzes and games, and inspiring talks from those who were once in your shoes.
+You will be learning in small groups, each with an assigned mentor to guide you through the workshop materials and answer your questions. You can expect plenty of exercises, as well as inspiring talks from those who were once in your shoes.
 
 [Apply to participate in the workshop](https://docs.google.com/forms/d/e/1FAIpQLSflhtsv0Ei1xm73DMoLL2vDpi4AwgrTtDScNk3aH4L3KA1OZg/viewform){: .btn}
 
@@ -48,7 +48,7 @@ We'd also like to thank the generous support of PyCon Italia in making this work
 
 ### Calling for mentors
 
-We wish to be able to run a workshop with as many participants as we can accommodate online, however, we also need a lot of mentors to help out. Being a mentor not only help you to familiarise yourself with your knowledge in data science, it also gives you a good vibe afterwards. If you have the skill to share, we are happy to welcome you to our Humble Data family.
+We wish to be able to run a workshop with as many participants as we can accommodate, however, we also need a lot of mentors to help out. Being a mentor not only help you to familiarise yourself with your knowledge in data science, it also gives you a good vibe afterwards. If you have the skill to share, we are happy to welcome you to our Humble Data family. Note that you don't need to be an expert - just be willing to be patient and demonstrate how to Google for answers if needed!
 
 Please be aware that mentors also need to be participants of the conference - [PyData Italia](https://2024.pycon.it/en).
 
