fix image for pycon italia 2025

--- a/_posts/2025-05-28-pyconitalia2025.md
+++ b/_posts/2025-05-28-pyconitalia2025.md
@@ -4,7 +4,7 @@ title: "Humble Data Workshop at PyCon Italia 2025"
 author: "Laís Carvalho"
 categories: event
 tags: [pycon, workshop]
-image: /assets/img/cover/bologna_pycon_italia25.jpg
+image: /assets/img/cover/bologna_pycon_italia2025.jpg
 ---
 
 ## Humble Data at PyCon Italia
@@ -43,7 +43,7 @@ This event is being held in person at the **Savoia Hotel Regency - Bologna** on 
 
 Anyone! While we're working with the organisers of PyCon Italia to host Humble Data, you will **not** need a ticket for the conference to attend this workshop. 
 
-We do have limited spots, so we will prioritise applicants from underrepresented groups in tech. Applications close on **~March 31st~ April 6th 2025**, and successful applicants will be informed by April 13th.
+We do have limited spots, so we will prioritise applicants from underrepresented groups in tech. Applications close on **~~March 31st~~ April 6th 2025**, and successful applicants will be informed by April 13th.
 
 **WHAT DO I NEED TO BRING?**
 
