add assets for HD PyCon US event

--- a/_posts/2025-05-18-pyconus2025.md
+++ b/_posts/2025-05-18-pyconus2025.md
@@ -4,7 +4,7 @@ title: "Humble Data Workshop at PyCon US 2025"
 author: "Laís Carvalho", "Cheuk Ting Ho"
 categories: event
 tags: [pycon, workshop]
-image: /assets/img/cover/... #todo
+image: /assets/img/cover/pycon_us_2025.png
 ---
 
 ## Humble Data at PyCon US
@@ -16,13 +16,13 @@ Would you like to learn to code but don’t know where to start? Taking your fir
 
 “We want our community to be more diverse: whoever you are, and whatever your background, we welcome you.” – Python Software Foundation’s Diversity Statement
 
-We invite those from under-represented groups in data to apply to join us at our Humble Data workshop, a free event associated **with PyCon US in pittsburgh on Sunday, 18 May 2025**.
+We invite those from under-represented groups in data to apply to join us at our Humble Data workshop, a free event associated **with PyCon US in Pittsburgh on Sunday, 18 May 2025**.
 
 In this workshop, you will learn the basics of programming in Python, as well as how to use tools such as Jupyter notebooks to analyse data. **Please note that you do _NOT_ need a ticket for the conference to attend this event!**
 
 You will be learning in small groups, each with an assigned mentor to guide you through the workshop materials and answer your questions. You can expect plenty of exercises, as well as inspiring talks from those who were once in your shoes.
 
-[Apply to join as learner](https://docs.google.com/forms/d/e/...){: .btn} [Apply to join as a mentor](https://docs.google.com/forms/d/e/...){: .btn}
+[Apply to join](https://docs.google.com/forms/d/e/1FAIpQLSdwmokS7qLxLmajVaMgYpAlltrVJIAl7yqqlyGyZmTtRQeKQw/viewform?usp=dialog){: .btn}
 
 ## FAQ
 
@@ -34,7 +34,7 @@ This event is being held in person as part of the Hatchery Program at **PyCon US
 
 Anyone! While we're working with the organisers of PyCon US to host Humble Data, you will **not** need a ticket for the conference to attend this workshop. 
 
-We do have limited spots, so we will prioritise applicants from underrepresented groups in tech. Applications close on **April 30th**, and successful applicants will be informed by early May.
+We do have limited spots, so we will prioritise applicants from underrepresented groups in tech. Applications close on **May 15th**, and successful applicants will be informed by early May.
 
 **WHAT DO I NEED TO BRING?**
 
@@ -68,4 +68,4 @@ We'd also like to thank PyCon US and the Hatchery Programme for all of their hel
 
 ---
 
-Cover Image: #todo
+Cover Image: [PyCon US 2025 website](https://us.pycon.org/2025/)
