update content for webpage announcement

--- a/_posts/2025-08-29-pycongreece2025.md
+++ b/_posts/2025-08-29-pycongreece2025.md
@@ -18,7 +18,7 @@ Would you like to learn to code but don’t know where to start? Taking your fir
 
 We invite those from under-represented groups in society to apply to join us at our Humble Data workshop, a free event associated **with PyCon Greece in Athens on Friday, 29th August 2025**.
 
-In this workshop, you will learn the basics of programming in Python, as well as how to use tools such as Jupyter notebooks to analyse data. **Please note that you do _NOT_ need a ticket for the conference to attend this event!**
+In this workshop, you will learn the basics of programming in Python, as well as how to use tools such as Jupyter notebooks to analyse data. **Please note: by joining Humble Data, you will receive a free ticket for both days of the conference!**
 
 You will be learning in small groups, each with an assigned mentor to guide you through the workshop materials and answer your questions. You can expect plenty of exercises, as well as inspiring talks from those who were once in your shoes.
 
