--- a/_posts/2025-08-29-pycongreece2025.md
+++ b/_posts/2025-08-29-pycongreece2025.md
@@ -38,7 +38,7 @@ The workshop will happen on August 29th 2025 at the [Technopolis City of Athens]
 
 **WHEN AND WHERE IS THE WORKSHOP?**
 
-This event is being held in person at the **Technopolis - City of Athens** on **Friday, 29th August 2025**. For further information, please keep an eye on [PyCon Greece's website](https://2025.pycon.gr/en/program/).  #todo: add link to event page
+This event is being held in person at the **Technopolis - City of Athens** on **Friday, 29th August 2025**. For further information, please keep an eye on [PyCon Greece's website](https://2025.pycon.gr/en/program/).
 
 **WHO CAN JOIN?**
 
