--- a/_posts/2025-09-23-pydataams2025.md
+++ b/_posts/2025-09-23-pydataams2025.md
@@ -5,11 +5,12 @@ author: "Jodie Burchell"
 categories: event
 tags: [workshop]
 image: /assets/img/cover/jetbrains_office_amsterdam_2025.jpg
+slug: "amssept2025"
 ---
 
-## Humble Data at PyData Amsterdam
+## Humble Data in Amsterdam
 
-We're holding a Humble Data Workshop on the evening of *September 23rd* in Amsterdam, Netherlands.
+We're holding a Humble Data Workshop on the **evening of September 23rd** in Amsterdam, Netherlands.
 
 ### Learn Python for Data Science in our workshop for complete beginners
 Would you like to learn to code but don’t know where to start? Taking your first steps in programming can seem like an impossible task, so we've created a workshop to show beginners how it can be done and share our passion for the world of data science!
