Add links and buttons for applications

--- a/_post/2025-12-13-torino.md
+++ b/_post/2025-12-13-torino.md
@@ -13,12 +13,11 @@ Saturday, 13 December 2025 in Turin, Italy
 
 
 **Quick links**  
-* Apply as a mentee (to learn together) https://forms.gle/CAmuyJAsfCChkJMS7  
-* Apply as a mentor (to help others learn) https://forms.gle/3gfMDqMEfbqA1FcJ7  
-
+[Apply as a mentee (to learn together)](https://forms.gle/CAmuyJAsfCChkJMS7){: .btn}   
+[Apply as a mentor (to help others learn)](https://forms.gle/3gfMDqMEfbqA1FcJ7){: .btn}    
 You will receive a confirmation email with further details after the deadline.
 
-##Italiano
+## Italiano
 *English below*
 
 Sei desiderosa/o di intraprendere una carriera tecnologica e non sapete da dove cominciare? Ti incuriosisce la Data Science?   
@@ -32,8 +31,8 @@ Chiunque può partecipare! E in particolar modo invitiamo coloro che appartengon
 Vi aspettano numerosi esercizi e chiacchierate stimolanti supportati/i da chi è stata/o al vostro posto. Verranno illustrate le basi della programmazione in Python, oltre a librerie e strumenti utili come Jupyter Notebook, Pandas e Matplotlib.
 
 **Iscriviti entro il 15 novembre!**  
-* Iscriviti come partecipante https://forms.gle/CAmuyJAsfCChkJMS7   
-* Iscriviti come mentor https://forms.gle/3gfMDqMEfbqA1FcJ7   
+[Iscriviti come partecipante](https://forms.gle/CAmuyJAsfCChkJMS7){: .btn}   
+[Iscriviti come mentor](https://forms.gle/3gfMDqMEfbqA1FcJ7){: .btn}      
 
 In questo workshop pratico lavorerete su una serie di materiali adatti ai principianti al vostro ritmo. Lavorerete in piccoli gruppi, ciascuno con un tutor assegnato, che sarà a disposizione per aiutarvi con qualsiasi domanda o in caso di blocco. Tutto ciò che dovrete portare è un computer portatile in grado di connettersi a internet e la voglia di imparare!
 
@@ -65,8 +64,8 @@ Taking the first steps in this field can be hard, but you don’t have to do it 
 You can expect plenty of exercises, as well as inspiring chats from those who were once in your shoes. You’ll cover the basics of programming in Python, as well as useful libraries and tools such as Jupyter Notebooks, Pandas, and Matplotlib.  
 
 **Apply by November 15!**   
-* Apply as mentee (participant) https://forms.gle/CAmuyJAsfCChkJMS7   
-* Apply as a mentor https://forms.gle/3gfMDqMEfbqA1FcJ7   
+[Apply as a mentee](https://forms.gle/CAmuyJAsfCChkJMS7){: .btn}   
+[Apply as a mentor](https://forms.gle/3gfMDqMEfbqA1FcJ7){: .btn}    
 
 In this hands-on workshop you’ll work through a series of beginner-friendly materials at your own pace. You’ll work within small groups, each with an assigned mentor, who will be there to help you with any questions or whenever you get stuck. All you’ll need to bring is a laptop that can connect to the internet and a willingness to learn!
 
