update image formats for event posts

--- a/_posts/2025-10-11-COD2025.md
+++ b/_posts/2025-10-11-COD2025.md
@@ -4,7 +4,7 @@ title: "Humble Data Workshop at College of DuPage"
 author: "Gabriel dos Reis"
 categories: event
 tags: [workshop]
-image: /assets/img/cover/cod-2025.jpg
+image: /assets/img/cover/cod-2025.png
 slug: cod2025
 ---
 
