--- a/_posts/2025-11-22-Lewis2025.md
+++ b/_posts/2025-11-22-Lewis2025.md
@@ -4,7 +4,7 @@ title: "Humble Data Workshop at Lewis University"
 author: "Gabriel dos Reis"
 categories: event
 tags: [workshop]
-image: /assets/img/cover/lewisu-2025.jpg
+image: /assets/img/cover/lewisu-2025.png
 slug: lewisu2025
 ---
 
