fix 2025 seoul event title to accept more sponsorship

--- a/_posts/2025-11-08-seoul2025.md
+++ b/_posts/2025-11-08-seoul2025.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Humble Data Workshop in Seoul"
+title: "Humble Data Workshop at Dongguk University in Seoul"
 author: "Cheuk Ho"
 categories: event
 tags: [workshop]
@@ -8,7 +8,7 @@ image: /assets/img/cover/seoul_2025.jpg
 slug: seoul2025
 ---
 
-## Humble Data in Seoul
+## Humble Data Workshop at Dongguk University in Seoul 
 
 Saturday 8 November 2025 at Dongguk University, Seoul, South Korea
 
